--- a/app/src/main/res/xml/apduservice.xml
+++ b/app/src/main/res/xml/apduservice.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <host-apdu-service xmlns:android="http://schemas.android.com/apk/res/android"
-    android:description="MyApduService"
+    android:description="@string/service_name"
     android:requireDeviceUnlock="false">
-    <aid-group android:category="other" android:description="MyApduService">
+    <aid-group android:category="other" android:description="@string/service_name">
         <!-- Define your custom AID here -->
         <!--todo: create unique AID? -->
         <aid-filter android:name="F0010203040506" />
